--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,12 @@ clokwerk = "0.4.0"
 easy-ext = "1.0.1"
 hex = "0.4.3"
 hyper = "0.14.26"
-lettre = "0.10.4"
+lettre = { version = "0.10.4", features = ["rustls-tls"] }
 log = { version = "0.4.17", features = ["std"] }
 maplit = "1.0.2"
-num-traits = "0.2.15"
 once_cell = "1.17.1"
 parking_lot = "0.12.1"
-reqwest = { version = "0.11.16", features = ["json"] }
+reqwest = { version = "0.11.16", features = ["json", "rustls-tls"] }
 ring = "0.16.20"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
@@ -28,7 +27,7 @@ serde_yaml = "0.9.21"
 tap = "1.0.1"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
-tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
 url = "2.3.1"
 
 [profile.dev]
