--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
 url = "2.3.1"
+polars = { version = "0.28.0", features = ["dtype-datetime", "timezones", "parquet", "polars-io", "polars-lazy", "lazy", "temporal"] }
 
 [profile.dev]
 panic = "abort"
