--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ anyhow = { version = "1.0.70", features = ["backtrace"] }
 async-trait = "0.1.68"
 chrono = "0.4.24"
 clap = { version = "4.2.4", features = ["derive"] }
-clokwerk = "0.4.0"
 easy-ext = "1.0.1"
 hex = "0.4.3"
 hyper = "0.14.26"
@@ -24,6 +23,7 @@ ring = "0.16.20"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
+rmp-serde = "1.1.1"
 tap = "1.0.1"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
