--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ ring = "0.16.20"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
+rmp = "0.8.11"
 rmp-serde = "1.1.1"
 tap = "1.0.1"
 thiserror = "1.0.40"
@@ -31,6 +32,7 @@ tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"]
 url = "2.3.1"
 polars = { version = "0.28.0", features = ["dtype-datetime", "timezones", "parquet", "polars-io", "polars-lazy", "lazy", "temporal"] }
 futures = { version = "0.3.28", default-features = true }
+memmap = "0.7.0"
 
 [profile.dev]
 panic = "abort"
