--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ futures = { version = "0.3.28", default-features = true }
 memmap = "0.7.0"
 uuid =  { version = "1.4.0", features = ["v4", "fast-rng" ] }
 duct = "0.13.6"
+strum = { version = "0.25", features = ["derive"] }
 
 [profile.dev]
 panic = "abort"
