--- a/config.bot.yaml
+++ b/config.bot.yaml
@@ -66,7 +66,9 @@ crawler_coincheck:
       settlement: JPY
       type: spot
       exc: coincheck
-  kline_builder: []
+  kline_builder:
+    - timeframe: 150s
+      len: 300
 crawler_bitflyer:
   strategy: crawler
   symbols:
