--- a/immortal/tracing_mm_coincheck.yml
+++ b/immortal/tracing_mm_coincheck.yml
@@ -4,7 +4,7 @@ env:
   CMD: /home/ec2-user/bot --name tracing_mm_coincheck
   HOME: /home/ec2-user
   RUST_BACKTRACE: full
-require_cmd: test $(hostname) = none
+require_cmd: test $(hostname) = s3
 log:
   file: /home/ec2-user/logs/tracing_mm_coincheck.log
   # age: 86400  # seconds
