--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = { version = "1.0.70", features = ["backtrace"] }
+labo = { path = "labo" }
 async-trait = "0.1.68"
-chrono = "0.4.24"
 clap = { version = "4.2.4", features = ["derive"] }
 easy-ext = "1.0.1"
 hex = "0.4.3"
@@ -20,27 +19,19 @@ once_cell = "1.17.1"
 parking_lot = "0.12.1"
 reqwest = { version = "0.11.16", features = ["json", "rustls-tls"] }
 ring = "0.16.20"
-serde = { version = "1.0.160", features = ["derive"] }
-serde_json = "1.0.96"
+serde = { version = "1.0.158", features = ["derive"] }
 serde_yaml = "0.9.21"
+strum = { version = "0.25", features = ["derive"] }
 rmp = "0.8.11"
-rmp-serde = "1.1.1"
 tap = "1.0.1"
-thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
 tokio-stream = "0.1.14"
 url = "2.3.1"
-polars = { version = "0.28.0", features = [
-    "dtype-datetime", "timezones", "parquet",
-    "polars-io", "polars-lazy", "lazy", "temporal",
-    "rolling_window", "pct_change", "ewma", "abs"
-] }
 futures = { version = "0.3.28", default-features = true }
 memmap = "0.7.0"
 uuid =  { version = "1.4.0", features = ["v4", "fast-rng" ] }
 duct = "0.13.6"
-strum = { version = "0.25", features = ["derive"] }
 ordered-float = "3.7.0"
 crossterm = "0.26.1"
 percent-encoding = "2.3.1"
