--- a/config.bot.yaml
+++ b/config.bot.yaml
@@ -21,4 +21,9 @@ abcdf_tachibana:
     - "7203"
     - "6758"
     - "9432"
-  model_path: model.zstd
+    - "6861"
+    - "8306"
+    - "8035"
+    - "9983"
+    - "4063"
+  model_path: model.zst
