--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-labo = { path = "labo" }
+labo = { path = "labo", features = ["single_output", "zstd"]}
 async-trait = "0.1.68"
 clap = { version = "4.2.4", features = ["derive"] }
 easy-ext = "1.0.1"
